--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -7,6 +7,16 @@ spring:
       server:
         webflux:
           routes:
+            ## REST CLIENT -> http://localhost:4004/auth/login
+            ## API GATEWAY -> http://auth-service:4005/login
+            ## AUTH SERVICE (SPRING BOOT APP) -> /login -> JWT Token
+            - id: auth-service-route
+              uri: http://auth-service:4005
+              predicates:
+                - Path=/auth/**
+              filters:
+                - StripPrefix=1
+
             ## REST CLIENT -> http://localhost:4004/api/patients
             ## API GATEWAY -> http://patient-service:4000/patients
             ## PATIENT SERVICE (SPRING BOOT APP) -> /patients -> Patients Array
