--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -28,6 +28,15 @@ spring:
                 - StripPrefix=1
                 - JwtValidation
 
+            ## REST CLIENT -> http://localhost:4004/api-docs/auth
+            ## API GATEWAY -> http://auth-service:4000/v3/api-docs
+            - id: api-docs-auth-route
+              uri: http://auth-service:4005
+              predicates:
+                - Path=/api-docs/auth
+              filters:
+                - RewritePath=/api-docs/auth,/v3/api-docs
+
             ## REST CLIENT -> http://localhost:4004/api-docs/patients
             ## API GATEWAY -> http://patient-service:4000/v3/api-docs
             - id: api-docs-patient-route
